whitespace at bottom bug

--- a/frontend/src/components/navigation/menu.css
+++ b/frontend/src/components/navigation/menu.css
@@ -1,6 +1,6 @@
 .menu {
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   position: fixed;
   transition: opacity 0.5s;
   /* transition: top 0.5s; */
@@ -11,4 +11,6 @@
 .menu.hide {
   opacity: 0;
   pointer-events: none;
+  /* display: none; */
+  height: 90px;
 }
