--- a/frontend/src/components/navigation/navbar.css
+++ b/frontend/src/components/navigation/navbar.css
@@ -22,6 +22,10 @@
   transition: opacity 0.5s;
 }
 
+.navbar a {
+  text-decoration: none;
+}
+
 .navbar h4 {
   margin-left: 30px;
   font-weight: 400;
