--- a/frontend/src/pages/viz/gender/genderlinecounts.css
+++ b/frontend/src/pages/viz/gender/genderlinecounts.css
@@ -19,4 +19,5 @@
 
 .genderlinecounts h1 {
   color: #3b2708;
+  margin-bottom: 5px;
 }
